--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "alt-ambiente-url",
   "main": "dist/alt-ambiente-url.min.js",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "homepage": "https://github.com/dsn-nimbus/alt-ambiente-url.git",
   "authors": ["dsn-nimbus <ericmdantas0@gmail.com>"],
   "description": "desc",
@@ -21,12 +21,6 @@
     "package.json",
     "*.conf.js"
   ],
-  "dependencies": {
-    "angular": ">=1.0.8"
-  },
-  "devDependencies":
-  {
-    "angular-mocks": ">=1.0.8"
-  }
-
+  "dependencies": {},
+  "devDependencies":{}
 }
